<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- title -->
    <string name="app_name">My Tours</string>
    <!-- buttons -->
    <string name="audio_out">Change audio output</string>
    <string name="play">Play</string>
    <string name="start">Start the Tour</string>
    <string name="pause">Pause</string>
    <string name="replay">Replay</string>
    <!-- text -->
    <string name="text_view1">Oops</string>
    <string name="text_view1_desc">Sorry, something went wrong</string>
    <!-- titles -->
    <string name="title_activity_select">Points of Interest</string>
    <string name="map_section">Map View</string>
    <string name="list_section">List View</string>
    <string name="intro_title">Overview</string>
    <string name="point_title">Detail</string>
    <string name="select_title">Points</string>
    <string name="empty"></string>
    <!-- options menu items -->
    <string name="action_settings">Settings</string>
    <string name="lookup">Find point using ID</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="search">Search</string>
    <!-- content description -->
    <string name="image">Image</string>

</resources>