<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="dcs.gla.ac.uk.minerva.MainActivity" >

    <item
        android:id="@+id/audio_settings"
        android:icon="@drawable/selecta"
        android:orderInCategory="100"
        android:title="@string/audio_out"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/page_search"
        android:icon="@android:drawable/ic_search_category_default"
        android:orderInCategory="100"
        android:title="@string/lookup"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/help"
        android:icon="@android:drawable/ic_search_category_default"
        android:orderInCategory="100"
        android:title="@string/help"/>
    <item
        android:id="@+id/about"
        android:orderInCategory="100"
        android:title="@string/about"/>

</menu>