<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:orientation="horizontal">
    
        <ImageButton
            android:id="@+id/btnReplay"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/replay"
            android:src="@android:drawable/ic_media_previous"
            android:text="@string/replay" />

        <ImageButton
            android:id="@+id/btnPlay"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/play"
            android:src="@android:drawable/ic_media_play"
            android:text="@string/play" />

        <ImageButton
            android:id="@+id/btnPause"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/pause"
            android:src="@android:drawable/ic_media_pause"
            android:text="@string/pause" />

    </LinearLayout>
