<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/AppBaseTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:layout_margin="16dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txtViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:gravity="center_vertical|center_horizontal"
        android:minLines="2"
        android:text="@string/text_view1"
        android:textSize="@dimen/title_size"
        android:textStyle="normal|bold|italic" />

        <ImageView
            android:id="@+id/imageViewPoint"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:background="#000000"
            android:scaleType="centerCrop"
            android:src="@raw/broken"
            android:contentDescription="@string/image"/>

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/txtViewDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:text="@string/text_view1_desc" />
        </ScrollView>

</LinearLayout>